--- a/trunk/user/smartdns/Makefile
+++ b/trunk/user/smartdns/Makefile
@@ -1,4 +1,4 @@
-SRC_NAME = smartdns-Release33
+SRC_NAME = smartdns-Release46.1
 THISDIR = $(shell pwd)
 
 all: extract_test config_test
@@ -24,3 +24,5 @@ clean:
 
 romfs:
 	$(ROMFSINST) -p +x $(THISDIR)/$(SRC_NAME)/src/smartdns /usr/bin/smartdns
+	$(ROMFSINST) -p +x $(THISDIR)/smartdns.sh /usr/bin/smartdns.sh
+
